# octo-dectron

./: .gitignore  Final Assignment.md  README.md  cnn.py  main.py  mlp.py  mlp_infra.py  pyproject.toml
Kitchen-sink/: Kitchen-sink.py  eda.py  load_data.py  mlp.py
SimpleModel/: eda.py  mlp.py
SimpleModel/cache/: dronerf_dataset.npz
Visualization/: count.py  model_performance.py  simple_visualization.py
data/: data.py
docs/: cnn-trainer-guide.md  dronerf-loader-guide.md  mlp-trainer-guide.md
tests/: conftest.py  test_cnn_model.py  test_loader_windowing.py  test_mlp_infra.py  test_mlp_model.py  test_split_behavior.py  test_split_integration.py
