[project]
name = "octo-dectron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "rarfile>=4.2",
    "scikit-learn>=1.4",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
markers = [
    "integration: optional tests that exercise real DroneRF data",
]
